# small-player

./: Cargo.toml  LICENSE  Readme.md  build.rs
.cargo/: config.toml
src/: defines.rs  error.rs  main.rs
src/common/: utils.rs
src/resources/: event.rs  fonts.rs  mod.rs  theme.rs
src/services/: mod.rs  play_service.rs
src/services/player/: _play1.rs  audio.rs  decode.rs  demux.rs  mod.rs  play.rs  player.rs  stream.rs  video.rs
src/system/: event_system.rs  mod.rs  play_system.rs  setup_system.rs  ui_system.rs
src/ui/: load_icons.rs  mod.rs  play_content.rs  play_control.rs  play_list.rs  setting_ui.rs  titlebar_ui.rs  ui_state.rs
tests/: test.rs
